# ansible-cachyos

./: README.md  pyproject.toml  site.yml
roles/cachyos/defaults/: main.yml
roles/cachyos/handlers/: main.yml
roles/cachyos/tasks/: applications.yml  audio.yml  c-family.yml  cpu.yml  filesystem.yml  firmware.yml  git.yml  golang.yml  gpu.yml  gui.yml  iptables.yml  kitty.yml  main.yml  manpages.yml  network.yml  pacman.yml  plasma.yml  python.yml  rust.yml  time.yml  user.yml  vim.yml
