[tool.poetry]
name = "ansible-cachyos"
version = "0.0.1"
description = ""
authors = ["EnbyTux <enbytux@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^4.8.0"

[tool.poetry.dev-dependencies]
ansible-lint = {extras = ["core", "yamllint"], version = "^5.2.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
